# sierra

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  test_vectordb.json
.config/: .env.shared
notebooks/: detr-table-extraction.ipynb  doc-extraction-awstextract.ipynb  sierra-bge-llama2.ipynb  sierra-bge-openai.ipynb  sierra-langgraph.ipynb  sierra-llama3-langgraph.ipynb  table-extraction-lmm.ipynb
src/vectordb/: __init__.py  azure_utils.py  extraction.py  vectordb.py
tests/: test_utils.py  test_vectordb.py
